# BioinfoReport

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo-report/: pyproject.toml  template.ipynb
demo-report/Aflibercept/: _config.yml  _toc.yml  intro.md
demo-report/Aflibercept/_build/.doctrees/: chaper1.doctree  environment.pickle  intro.doctree  template.doctree
demo-report/Aflibercept/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/Aflibercept/ipynb/: chapter1.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb
demo-report/H01C65/: _config.yml  _toc.yml  intro.md
demo-report/H01C65/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/H01C65/ipynb/: chapter2.ipynb
demo-report/H01C73/: _config.yml  intro.md
demo-report/H01C73/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/H01C73/ipynb/: chapter1.ipynb  chapter2.ipynb
demo-report/Hunterase/: _config.yml  _toc.yml  intro.md
demo-report/Hunterase/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/Hunterase/ipynb/: chapter1.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb
demo-report/mouseAvastin/: _config.yml  intro.md
demo-report/mouseAvastin/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/mouseAvastin/ipynb/: chapter1.ipynb  chapter2.ipynb
demo-report/mousePB101/: _config.yml  intro.md
demo-report/mousePB101/data/: MHC1.txt  MHC2.txt  sequence.fasta
demo-report/mousePB101/ipynb/: chapter1.ipynb  chapter2.ipynb
demo-report/wordcloud/: 0816_NN_Wordcloud.csv  wordcloud.ipynb
src/: main.py
(+131 files in other folders)
