[project]
name = ""
version = ""
description = ""
authors = [
    {name = "deepthought", email = "partrita@gmail.com"},
]
dependencies = [
    "biopython>=1.79",
    "jupyter-book>=0.12.3",
    "biotite>=0.33.0",
    "matplotlib>=3.5.1",
    "nglview>=3.0.3",
    "ipywidgets>=7.7.0",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
