[project]
name = "bioinforeport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.85",
    "biotite>=1.1.0",
    "ipywidgets>=8.1.5",
    "jupyter-book>=1.0.3",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "nglview>=3.1.4",
]
