[tool.poetry]
name = "demo-report"
version = "0.1.0"
description = ""
authors = ["deepthought <partrita@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-book = "^0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
